--- a/action.yml
+++ b/action.yml
@@ -79,6 +79,9 @@ inputs:
   run-task-managed-ebs-volume:
     description: "A JSON object defining the configuration settings for the Amazon EBS task volume that was configuredAtLaunch. These settings are used to create each Amazon EBS volume, with one volume created for each task in the service. The Amazon EBS volumes are visible in your account in the Amazon EC2 console once they are created."
     required: false
+  run-task-count:
+    description: "The number of instantiations of the specified task to place on your cluster. You can specify up to 10 tasks for each call."
+    required: false
   wait-for-task-stopped:
     description: 'Whether to wait for the task to stop when running it outside of a service. Will default to not wait.'
     required: false
